# QMolFoundry

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: README.md  bank_classic_classical_both.npz  bank_classic_none_both.npz  bank_classic_quantum_both.npz  bank_efq_classical_both.npz  bank_efq_none_both.npz  bank_efq_quantum_both.npz  bank_vvrq_classical_both.npz  bank_vvrq_none_both.npz  bank_vvrq_quantum_both.npz  compare_z_efq_classical_both.npy  compare_z_efq_none_both.npy  compare_z_efq_quantum_both.npy  compare_z_vvrq_none_both.npy  compare_z_vvrq_quantum_both.npy  molecules.db  probs_efq_classical_both_fake_brisbane.npy  probs_efq_classical_both_fake_osaka.npy  probs_efq_classical_both_fake_sherbrooke.npy  probs_efq_none_both_fake_brisbane.npy  probs_efq_none_both_fake_osaka.npy  probs_efq_none_both_fake_sherbrooke.npy  probs_efq_quantum_both_fake_brisbane.npy  probs_efq_quantum_both_fake_osaka.npy  probs_efq_quantum_both_fake_sherbrooke.npy  probs_vvrq_classical_both_fake_brisbane.npy  probs_vvrq_classical_both_fake_osaka.npy  probs_vvrq_classical_both_fake_sherbrooke.npy  probs_vvrq_none_both_fake_brisbane.npy  probs_vvrq_none_both_fake_osaka.npy  probs_vvrq_none_both_fake_sherbrooke.npy  probs_vvrq_quantum_both_fake_brisbane.npy  probs_vvrq_quantum_both_fake_osaka.npy  probs_vvrq_quantum_both_fake_sherbrooke.npy
models/: __init__.py  backends.py  base.py  build_curated_bank.py  decode.py  generators.py  molecule_db.py  molgan_nets.py  qm9_meta.py  quantum_model.py
scripts/: build_molecule_db.py  precompute_backends.py
(+15 files in other folders)
