[project]
name = "hg-app"
version = "0.1.0"
description = "Hybrid Quantum MolGAN — interactive Gradio showcase"
requires-python = ">=3.11,<3.14"
dependencies = [
    "gradio==6.19.0",
    "pennylane==0.45.1",
    "rdkit==2026.03.3",
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "pillow==12.1.1",
    "qiskit==2.4.2",
    "qiskit-aer==0.17.2",
    "qiskit-ibm-runtime==0.47.0",
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.9",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["."]
